# credana

./: .env.auth  .gitignore  CHANGELOG.md  COMPLETE-TEST-SUMMARY.md  README.md  TESTING-SUMMARY.md  test-real-card.md  turnkey-api-credentials-1754519373543.json
anchor/: .tool-versions  Anchor.toml  fresh-program.json  new-program-keypair.json  package-lock.json  package.json
anchor/programs/credit-core/: Cargo.toml
anchor/programs/credit-core/src/: constants.rs  errors.rs  lib.rs  oracle.rs  utils.rs  utils_fix.patch
anchor/programs/credit-core/src/instructions/: admin_set_params.rs  admin_set_paused.rs  borrow_usdc.rs.bak  debit_deposit.rs  debit_settle.rs  debit_spend.rs  deposit_collateral.rs.bak  deposit_collateral_wsol.rs  init_position.rs  init_treasury.rs.bak  initialize.rs  liquidate.rs  liquidate.rs.bak  mod.rs  record_debt.rs  record_debt.rs.bak  repay_usdc.rs  repay_usdc.rs.bak  repay_usdc_proper.rs.bak  withdraw_collateral.rs
anchor/programs/credit-core/src/state/: config.rs  debit_account.rs  mod.rs  user_position.rs
backend/: .env.auth  .env.example  .pgmrc.json  APPLE_PAY_TEST_GUIDE.md  COMPLETE_SYSTEM_STATUS.md  CREDANA_LITHIC_ARCHITECTURE.md  LITHIC_DEEP_INTEGRATION_GUIDE.md  MAINNET_APPLE_PAY_GUIDE.md  OFF_RAMP_INTEGRATION_GUIDE.md  PRODUCTION_READY.md  auth.env.example  deep-analysis-credit-system.ts  init-position-helper.ts  jest.config.js  package-lock.json  package.json  real-credit-server.ts  start-all.sh  test-complete-flow.ts  test-end-to-end-simple.ts  test-full-credit-system.ts  test-server.js  test-with-your-wallet.ts  tsconfig.json
(+86 files in other folders)
