[package]
name = "credit-core"
version = "0.1.0"
description = "Solana on-chain credit card system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credit_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
pyth-sdk-solana = "0.10.1"
solana-program = "1.17.0" 